syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "domains/nutrition/models/personal_nutrition_lifestyle.proto";

package domains.nutrition.services.base.personal_nutrition_lifestyle;
option go_package = "github.com/kirvader/BodyController/domains/nutrition/services/base/personal_nutrition_lifestyle/proto";

service PersonalNutritionLifestyle {
  	rpc CreatePersonalNutritionLifestyle(CreatePersonalNutritionLifestyleRequest) returns (CreatePersonalNutritionLifestyleResponse);
	rpc DeletePersonalNutritionLifestyle(DeletePersonalNutritionLifestyleRequest) returns (DeletePersonalNutritionLifestyleResponse);
	rpc UpdatePersonalNutritionLifestyle(UpdatePersonalNutritionLifestyleRequest) returns (UpdatePersonalNutritionLifestyleResponse);

	rpc GetPersonalNutritionLifestyle(GetPersonalNutritionLifestyleRequest) returns (GetPersonalNutritionLifestyleResponse);
	rpc ListPersonalNutritionLifestyles(ListPersonalNutritionLifestylesRequest) returns (ListPersonalNutritionLifestylesResponse);
}

message CreatePersonalNutritionLifestyleRequest {
	domains.nutrition.models.PersonalNutritionLifestyle personal_nutrition_lifestyle = 1;
};

message CreatePersonalNutritionLifestyleResponse {
	string personal_nutrition_lifestyle_hex_id = 1;
};

message DeletePersonalNutritionLifestyleRequest {
	string personal_nutrition_lifestyle_hex_id = 1;
};

message DeletePersonalNutritionLifestyleResponse {};

message UpdatePersonalNutritionLifestyleRequest {
	string personal_nutrition_lifestyle_hex_id = 1;
	domains.nutrition.models.PersonalNutritionLifestyle new_personal_nutrition_lifestyle_info = 2;
};

message UpdatePersonalNutritionLifestyleResponse {};

message GetPersonalNutritionLifestyleRequest {
	string personal_nutrition_lifestyle_hex_id = 1;
};

message GetPersonalNutritionLifestyleResponse {
	domains.nutrition.models.PersonalNutritionLifestyle personal_nutrition_lifestyle = 1;
};

message ListPersonalNutritionLifestylesRequest {
	int32 page_size = 1;
	google.protobuf.StringValue last_page_token = 2;
};

message ListPersonalNutritionLifestylesResponse {
	repeated domains.nutrition.models.PersonalNutritionLifestyle personal_nutrition_lifestyles = 1;
	google.protobuf.StringValue retrieved_page_token = 2;
};


